# BrightForge

./: .dockerignore  .env.docker.example  .env.example  .env.local.example  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  BRIGHTFORGE_MASTER.md  CLAUDE.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  INSTALL.md  MORNING_SUMMARY.md  OVERNIGHT_RECOVERY_REPORT.md  README.md  SECURITY.md  SESSION_HANDOFF.md  STATUS.md  TASK.md  THIRD-PARTY-NOTICES.md  docker-compose.yml  package-lock.json  package.json  test-telemetry-integration.js
.agentforge/: audit_result.json
.brightforge/: memory.json
.claude/: HANDOFF.md  skill_registry.json  skill_usage.md
analysis/: coupling_report.md  pipeline_flow.md  reuse_inventory.md  roadmap.md  structure_map.md  ui_audit.md
config/: agent-config.yaml  asset-pipelines.yaml  contracts.json  (+14 more)
engine/: .gitignore  CMakeLists.txt  README.md
engine/docs/: CLAUDE_COMMAND_REFERENCE.md  PROJECT_OVERVIEW.md  RENDERING_PIPELINE_BLUEPRINT.md  Z_DEPTH_ANALYSIS.md
engine/shaders/: FragmentShader.hlsl.TODO  FragmentShader_PBR.hlsl.TODO  VertexShader.hlsl.TODO
engine/skills/debugwindow/: SKILL.md
engine/skills/quotesystem/: SKILL.md
engine/skills/rendering/: SKILL.md
engine/skills/testmanager/: SKILL.md
engine/src/: main.cpp
engine/src/core/: DebugWindow.h  EventBus.h  QuoteSystem.h  TestManager.h
engine/src/rendering/: Camera.h.TODO  IRenderService.h  RenderConfig.h  renderer.h.TODO
engine/tasks/: PHASE_1_ANALYSIS.md  PHASE_2_BACKEND_REFACTOR.md  PHASE_3_UI_DESIGN.md  PHASE_4_FRONTEND.md  PHASE_5_INTEGRATION.md  Z_DEPTH_FIX.md
(+340 files in other folders)
